# swc-plugin-abe-hiroshi

./: .gitignore  .rust-toolchain  Cargo.toml  README.md  package-lock.json  package.json
example/: .swcrc  package-lock.json  package.json  test.ts
fixture/: input.ts  output.js
src/: lib.rs  test.rs
