[package]
name = "swc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "0.59.*", features = ["ecma_plugin_transform"] }

swc_ecma_ast = "0.96.5"

[dev-dependencies]
testing = "0.31.33"
swc_ecma_parser = "0.124.9"
swc_ecma_transforms_testing = "0.119.9"
